# GeneratorBase

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  license.txt
cmake/: antlr_generate.cmake  get_antlr.cmake  get_antlr_manual.cmake  symlink_to_bin.cmake
grammar/: Generator.g4
src/: CMakeLists.txt  main.cpp  placeholder.cpp
tests/: GeneratorConfig.json  pre-commit
tests/input/: .gitkeep
